<resources>
    <string name="app_name">My Music</string>

    <string name="local_music">本地音乐</string>
    <string name="online_music">音乐库</string>
    <string name="my_music">我的音乐</string>
    <string name="welcome">欢迎</string>
    <string name="please_login">请登录</string>

    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="menu_login">登录</string>
    <string name="menu_logged">已登录</string>
    <string name="menu_share">分享</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
