<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/action_user"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>